# image-generation-evaluation

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  data.dvc  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: afhqv2.yaml
configs/logging/: mlflow.yaml
configs/model/: wgan_gp.yaml
configs/system/: default.yaml
configs/train/: default.yaml
data/datasets/: .gitignore  AFHQv2.dvc
image_generation_evaluation/: data.py  train.py
image_generation_evaluation/models/wgan_gp/: model.py  module.py  train.py
